# rustic-blog

./: .env  .env.development  .env.local  .env.production  .env.staging  .gitignore  Cargo.toml  LICENSE  docker-compose.yml
database/: migration.sql  seed.sql
src/: lib.rs  main.rs
src/api/: router.rs
src/api/controller/: health.rs
src/config/: env.rs  mod.rs  server.rs
src/database/: client.rs
